'網頁版型建置'

--- a/index.html
+++ b/index.html
@@ -5,10 +5,297 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高雄旅遊網</title>
+    <link rel="stylesheet" href="css/framework.css">
+    <link rel="stylesheet" href="css/icomoon/style.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 
 <body>
+    <div class="page">
+        <a class="topbut">
+            <p class="">︿</p>
+        </a>
+        <header class="container">
+            <div class="bg-img "></div>
+            <div class="headertitle">
+                <h1 class="text-white text-center">高雄旅遊網</h1>
+                <div class="Addcity">
+                    <select name="add-city" id="add-city" class="">
+                        <option selected disabled="disabled">- - 請選擇行政區- -</option>
+                        <option value="">0101</option>
+                    </select>
+                    <label for="add-city" class="addon icon-under"></label>
+                </div>
 
+            </div>
+            <div class="Popular">
+                <h3 class="Ptitle">熱門行政區</h3>
+                <button class="AreaLabel bg-po1">苓雅區</button>
+                <button class="AreaLabel bg-orange1">三民區</button>
+                <button class="AreaLabel bg-yello1">新興區</button>
+                <button class="AreaLabel bg-blue1">鹽埕區</button>
+            </div>
+            <div class="text-center Dividingline">
+                <hr>
+                <span class="icon-under"></span>
+            </div>
+        </header>
+        <article class="container text-center Attractions">
+            <h2 class="Districtname">三民區</h2>
+            <section class="">
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-out">
+                    <div class="card">
+                        <div class="card-img">
+                            <h3 class="name">高雄願景館</h3>
+                            <p class="Zone">三民區</p>
+                        </div>
+                        <div class="card-news">
+                            <p class=""><span class="icon-clock te-po1"></span><span
+                                    class="time">週二至週日10:00-18:00，每週一公休</span>
+                            </p>
+                            <p class=""><span class="icon-Address te-orange1"></span><a
+                                    class="address">高雄市三民區建國二路318號</a>
+                            </p>
+                            <p class="">
+                                <span class=""><span class="icon-phone te-blue1"></span><a
+                                        class="phone">886-7-2363357</a></span>
+                                <span class="Ticketinfo"><span class="icon-ticket  te-yello1"></span><span
+                                        class="">免費參觀</span></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </article>
+        <article class="container text-center">
+            <nav class="pageNumber">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#"> &#60; prev </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link" href="#">6</a></li>
+                    <li class="page-item"><a class="page-link" href="#">next &#62;</a></li>
+                </ul>
+            </nav>
+        </article>
+        <footer class="text-center">
+            <p class="">高雄旅遊網</p>
+            <p class="mt-2 te-yello1">資料來源：高雄市政府 </p>
+            <p class="mt-2">2020 六角學院課程練習作品 蘇喜福</p>
+        </footer>
+    </div>
 </body>
 
 </html>
